# grpc_vs_rest

./: .gitignore  README.md  grpc_locustfile.py  grpc_test.sh  proto.sh  proto_grpc_gateway.sh  proto_python_server.sh  pyproject.toml  rest_locustfile.py  rest_test.sh
app/: grpc_aio_server.py  grpc_server.py  rest_server.py
app/pb/: payload_pb2.py  payload_pb2_grpc.py
app/pb/proto/payload/: payload_pb2.py  payload_pb2_grpc.py
benchmark/: README.md  bench_grpc.sh  bench_grpc_aio.sh  bench_grpc_gateway.sh  bench_grpc_gateway_aio.sh  bench_rest.sh
grpc-gateway/: README.md  go.mod  go.sum  main.go
proto/: payload.proto
proto/payload/: payload.proto
