[project]
name = "grpc-rest-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api>=0.1.12",
    "googleapis-common-protos>=1.70.0",
    "grpcio>=1.71.0",
    "grpcio-tools>=1.71.0",
    "locust>=2.34.1",
    "protobuf>=5.29.4",
    "starlette>=0.46.1",
    "uvicorn[standard]>=0.34.0",
]
